tests/integration/valid/boolean_valid.lof
// SHOULD_PASS - Boolean operations
proof BooleanValid {
    input a: field;
    input b: field;
    let comparison = a === b in
    comparison
}